# google-workspace-gmail-agent

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Setup-Gmail-Agent.cmd  Setup-Gmail-Agent.sh  Start-Gmail-Agent.cmd  Start-Gmail-Agent.sh  compose.yaml  pyproject.toml  rxconfig.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: container.yml  quality.yml
assets/: styles.css
docs/: advanced-blocking.md  api-feasibility.md  architecture.md  audit-format.md  clean-code-standards.md  containers.md  design-system.md  first-login.md  implementation-status.md  live-test-procedure.md  operator-console.md  reflex-design-system.md  repository-inventory.md  repository-organization.md  selector-repair.md  threat-model.md
gmail_admin_agent/: __init__.py  gmail_admin_agent.py
reflex.lock/: package-lock.json  package.json
scripts/: __init__.py  container-entrypoint.sh  container-model-entrypoint.sh  export_redacted_audit.py  inspect_fixture.py  install_node.py  login.py  observe_ui.py  try_planner.py
src/compliance_agent/: __init__.py  cli.py  composition.py  container_startup.py  exceptions.py  launcher.py  settings.py  startup.py
src/compliance_agent/application/: __init__.py  approval_service.py  attended_audit.py  attended_policy_service.py  audit_catalog.py  audit_inspection_service.py  audit_service.py  change_presentation.py  change_service.py  compliance_audit_service.py  (+22 more)
tests/: __init__.py  conftest.py
tests/architecture/: __init__.py  test_dependency_boundaries.py
tests/browser/: __init__.py  test_diagnostics.py  test_locator_contracts.py  test_pages.py  test_session.py
tests/unit/: __init__.py  test_agent_browser_execution.py  test_application_and_workflow.py  test_attended_policy_service.py  test_audit.py  test_compliance_v2.py  test_console_enhancements.py  test_console_plan_improvements.py  test_console_recovery.py  test_console_run_status.py  test_console_ui.py  test_container_contract.py  test_container_startup.py  test_diff_hash_preconditions.py  test_google_state_read.py  test_launch_scripts.py  test_normalization.py  test_observe_ui_script.py  test_ownership_and_desired_state.py  test_persona_randomness.py  test_plan_schema.py  test_policy_draft_composer.py  test_preflight_policy.py  test_reflex_persona_state.py  test_remaining_integration.py  test_settings_cli_infrastructure.py  test_structured_planner.py  test_verification_reconciliation_reporting.py
tests/workflow/: __init__.py  test_full_workflow.py  test_preflight_schema.py
(+121 files in other folders)
